@@ -7,7 +7,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 9.20160114~),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.7.0+dfsg~),
                qtdeclarative5-private-dev (>= 5.7.0~),
@@ -66,20 +66,6 @@ Description: Qt 5 sensors examples
  is its rich set of widgets that provide standard GUI functionality.
  .
  This package contains Qt 5 Sensors examples.
-
-Package: qtsensors5-dbg
-Priority: extra
-Architecture: any
-Multi-Arch: same
-Section: debug
-Depends: libqt5sensors5 (= ${binary:Version}), ${misc:Depends}
-Suggests: qtsensors5-examples (= ${binary:Version})
-Description: Qt sensors library debugging symbols
- Qt is a cross-platform C++ application framework. Qt's primary feature
- is its rich set of widgets that provide standard GUI functionality.
- .
- This package contains the debugging symbols for the Qt 5 Sensors
- libraries.
 
 Package: qtsensors5-doc
 Priority: extra
