@@ -6,6 +6,7 @@ qtsensors-opensource-src (5.7.0-1) UNRELEASED; urgency=medium
   * Update debian/copyright.
   * Install the new iio-sensor-proxy plugin on Linux.
   * Drop obsolete Breaks/Replaces.
+  * Migrate to automatic dbgsym packages.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 16 Jul 2016 11:06:36 +0300
 
